# World-Cup-z-Scores

./: .gitignore  Grouped LOO z-Score World Cup Analysis.ipynb  README.md  loo_xscore_framework.ipynb  pyproject.toml
